Edit user schema, routes, swagger config
